--- a/css/_main.scss
+++ b/css/_main.scss
@@ -442,6 +442,7 @@ h5 {
 @media (max-width: 576px) {
     .joint-items {
         flex-direction: column;
+        padding-inline: 14px;
     }
     .joint-item {
         width: 100%;
@@ -484,6 +485,7 @@ h5 {
 @media (max-width: 576px) {
     .reco-items {
         flex-direction: column;
+        padding-inline: 14px;
     }
     .reco-item {
         width: 100%;
